--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -440,7 +440,7 @@
 
 <!-- Modal -->
 <div id="createStuvationModal" class="modal fade" role="dialog">
-    <div class="modal-dialog" style="max-width : 70% !important;">
+    <div class="modal-dialog stuv-popup" style="">
 
         <!-- Modal content-->
         <div class="modal-content">
@@ -893,7 +893,7 @@
 </div>
 
 <div id="createProjectModal" class="modal fade" role="dialog">
-    <div class="modal-dialog" style="max-width : 70% !important;">
+    <div class="modal-dialog stuv-popup" style="">
 
         <!-- Modal content-->
         <div class="modal-content">
