--- a/src/app/stuvation/stuvation.component.css
+++ b/src/app/stuvation/stuvation.component.css
@@ -101,9 +101,37 @@
     margin-bottom: 25px;
     box-shadow: 5px 9px 13px -6px rgba(0, 0, 0, .3) !important;
         }
+
+        .stuv-popup{
+            max-width : 70%;
+          }
 /***************mediaquaries*********/
 
 @media screen and (min-width: 320px) and (max-width: 567px) {
+    .modal .btn.buttonarticle {
+        margin-top: 12px;
+    }
+    .stuv-popup{
+        max-width : 100%;
+      }
+    .buttonarticle {
+        margin: auto;
+        display: block;
+        padding: 8px;
+        height: 40px;
+        padding: 0 12px;
+        font-size: 14px;
+        margin-top: 15px;
+        border-radius: 33px;
+    }
+    .m-row .col-4{
+        width: 50%;
+        max-width: 60%;
+        flex: initial;
+    }
+    .m-row{
+        margin: 20px 30px;
+    }
     .tec_ryt {
         text-align: center;
     }
