--- a/src/app/stuvation/stuvation.component.html
+++ b/src/app/stuvation/stuvation.component.html
@@ -81,7 +81,7 @@
 
 
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-12" style="margin-top: 1em;">
       <div class="card" style="width: 100%;"
@@ -236,7 +236,7 @@
 <br />
 
 <div id="showStuvationDiscussionModal" class="modal fade" role="dialog">
-  <div class="modal-dialog" style="max-width : 70% !important;">
+  <div class="modal-dialog stuv-popup" style="">
 
     <!-- Modal content-->
     <div class="modal-content">
@@ -332,13 +332,13 @@
 </div>
 
 <div id="showJoinTeamPopupModal" class="modal fade" role="dialog">
-  <div class="modal-dialog" style="max-width : 50% !important;">
+  <div class="modal-dialog stuv-popup" style="">
 
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header" style="background-color: #33099e; text-align: center; align-items: center;">
         <span style="text-align: center; color: white; width: 100%;">
-          <h4>Connect & Join as a Team</h4>
+          <h4>Connect &amp; Join as a Team</h4>
         </span>
         <button style="float: right; color: white;" type="button" class="close" data-dismiss="modal"
           id="closeJoinTeamPopupModal">&times;</button>
