--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1096,7 +1096,7 @@
                     <div class="col-md-2">
                         &nbsp;
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 _modl">
                         <span style="text-align: center; width: 100%;display: inline-flex">
                             <label style="font-weight: bold;">Select Connect Type:&nbsp;&nbsp;&nbsp;&nbsp;</label>
                             <!-- <input type="radio" name="techConnectSelector" [(ngModel)]="techConnectSelector"
