--- a/src/app/tech-bank/tech-bank.component.html
+++ b/src/app/tech-bank/tech-bank.component.html
@@ -23,21 +23,21 @@
     </a>
   </div>
 </div> -->
-<div class="row tech-bank-filters" style="background-color: #F4F6F5; height: 4em; ">
+<div class="row tech-bank-filters" style="background-color: #F4F6F5; height: auto; ">
   <div class="col-md-4">&nbsp;</div>
   <div class="col-md-4 text1">
     <h2 class="text-center tch-m-hdng">Tech Connect Programmes</h2>
   </div>
-  <div class="col-md-4" style="margin-left: -1%;">
+  <div class="col-md-4" style="">
     <button *ngIf="!checkLoginStatus()" type="button" data-toggle="modal" class="buttonarticle"
-      data-target="#createTechConnectModal" style="margin:auto;display:block;float:initial;margin-top:10px;">Create
-      Tech Connect</button>
+      data-target="#createTechConnectModal" style="margin:auto;display:block;float:initial;margin-top:10px;">
+      Create Tech Connect</button>
   </div>
 </div>
 
 <div id="techBankEventFilterDiv" class="row filter-divs" *ngIf="!checkLoginStatus()">
 
-  <div class="col-md-6">
+  <div class="col-md-5">
 
     <input type="text" class="form-control filter-input" placeholder="Search with Name.." name="techarticledetails"
       [(ngModel)]="techEventFilter.originatorname" *ngIf="showKeyword" />
@@ -52,7 +52,7 @@
 
 
   </div>
-  <div class="col-md-6">
+  <div class="col-md-7 fltrs">
     <div class="row" style="font-size: 1rem;">
       <div class="col-4">
         <p (click)="selectKeyword()"> <span class="radio-btns">&nbsp;</span><span class="white-radio">&nbsp;</span><i
@@ -98,7 +98,7 @@
 
           <div id="teachcollapse{{i}}" [ngClass]="{'show' : i==0}" class="" attr.aria-labelledby="teachheading{{i}}"
             data-parent="#accordionExample">
-            <div class="card-body ">
+            <div class="card-body teach-bdy">
               <div class="col-12">
 
                 <span class="cardSubHeading crd-hdng">Tech Connect Details</span>
@@ -138,20 +138,24 @@
                     {{techteach.registrationCount}}</span>
                 </div>
 
-                <ul class="nav nav-pills crd-btn-dv">
-                  <li class="nav-item">
-                    <button class="nav-link btn btn-light  buttonarticle" (click)="viewTechTeachDetails(techteach)"
-                      data-toggle="modal" data-target="#detailsModal">View
-                      Detail's</button>
-                  </li>
-                  <li class="nav-item" *ngIf="!checkLoginStatus()">
-                    <button class="nav-link btn btn-light buttonarticle" style="margin-left: 40%;"
-                      (click)="applyForEventTechTeach(techteach)">Apply for this event</button>
-                  </li>
-                </ul>
-                <br />
+               
               </div>
             </div>
+
+            <div class="crd-footr">
+              <ul class="nav nav-pills crd-btn-dv">
+                <li class="nav-item">
+                  <button class="nav-link btn btn-light  buttonarticle" (click)="viewTechTeachDetails(techteach)"
+                    data-toggle="modal" data-target="#detailsModal">View
+                    Detail's</button>
+                </li>
+                <li class="nav-item" *ngIf="!checkLoginStatus()">
+                  <button class="nav-link btn btn-light buttonarticle" style=""
+                    (click)="applyForEventTechTeach(techteach)">Apply for this event</button>
+                </li>
+              </ul>
+            </div>
+
           </div>
         </div>
 
@@ -172,7 +176,7 @@
 
             <div id="talkcollapse{{i}}" [ngClass]="{'show' : i==0 && techteachdetails?.length==0}" class=""
               attr.aria-labelledby="talkheading{{i}}" data-parent="#accordionExample">
-              <div class="card-body">
+              <div class="card-body talk-bdy">
                 <div class="col-12">
                   <span class="cardSubHeading crd-hdng">Tech Connect Details</span>
                   <div><b class="crd-lft">Type</b> <span class="crd-ryt">: {{techtalkdata.techtalktype}}</span></div>
@@ -221,19 +225,22 @@
                   <div><b class="crd-lft">No. of Registration</b> <span class="crd-ryt">:
                       {{techtalkdata.registrationCount}}</span>
                   </div>
-                  <ul class="nav nav-pills crd-btn-dv">
-                    <li class="nav-item">
-                      <button class="nav-link btn btn-light  buttonarticle" (click)="viewTechTalkDetails(techtalkdata)"
-                        data-toggle="modal" data-target="#detailsModal">View
-                        Detail's</button>
-                    </li>
-                    <li class="nav-item" *ngIf="!checkLoginStatus()">
-                      <button class="nav-link btn btn-light buttonarticle" style="margin-left: 40%;"
-                        (click)="applyForEventTechTalk(techtalkdata)">Apply for the event</button>
-                    </li>
-                  </ul>
+                  
 
                 </div>
+              </div>
+
+              <div class="crd-footr">
+                <ul class="nav nav-pills crd-btn-dv">
+                  <li class="nav-item">
+                    <button class="nav-link btn btn-light  buttonarticle" (click)="viewTechTalkDetails(techtalkdata)"
+                      data-toggle="modal" data-target="#detailsModal">View Detail's</button>
+                  </li>
+                  <li class="nav-item" *ngIf="!checkLoginStatus()">
+                    <button class="nav-link btn btn-light buttonarticle" style=""
+                      (click)="applyForEventTechTalk(techtalkdata)">Apply for the event</button>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
