--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -629,8 +629,8 @@
     </div>
 </div>
 
-<div id="createEngshipModal" class="modal fade" role="dialog">
-    <div class="modal-dialog" style="max-width : 70% !important;">
+<div id="createEngshipModal" class="modal fade engship-modl" role="dialog">
+    <div class="modal-dialog" >
 
         <!-- Modal content-->
         <div class="modal-content">
