--- a/src/app/engship/engship.component.css
+++ b/src/app/engship/engship.component.css
@@ -1,3 +1,31 @@
 .techarticleRow1{
     background-color: #F4F6F5;
 }
+
+   /***************mediaquaries*********/
+
+   @media screen and (min-width: 320px) and (max-width: 567px) {
+    .engship-top .col-6{
+        width: 100%;
+        max-width: 100%;
+        flex: initial;
+        }
+   }
+   
+   @media screen and (min-width: 360px) and (max-width: 539px) {}
+   
+   @media screen and (min-width: 460px) and (max-width: 767px) {}
+   
+   @media only screen and (min-width: 540px) and (max-width: 767px) {}
+   
+   @media only screen and (min-width: 768px) and (max-width: 959px) {}
+   
+   @media only screen and (min-width: 799px) and (max-width: 960px) {}
+   
+   @media only screen and (min-width: 960px) and (max-width: 1023px) {}
+   
+   @media only screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+   @media only screen and (min-width: 1280px) and (max-width: 1365px) {}
+   
+   @media screen and (max-width: 1600px) {}
